--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-# requirements.txt
-numpy>=1.23
-opencv-python>=4.8
+streamlit
+streamlit-webrtc>=0.47
+opencv-python-headless>=4.8
 imutils>=0.5.4
-dlib>=19.24
-pygame>=2.5
-
-# Optional (helps if dlib needs to build from source on your machine)
-cmake>=3.20
+numpy>=1.23
+av>=11.0.0
+dlib==19.24.2
